--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.16)
 add_subdirectory(allocation_basics)
 
 add_subdirectory(simpelCalc)
+add_subdirectory(FirstClass)
