--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.16)
 
 add_subdirectory(allocation_basics)
 add_subdirectory(FirstClass)
+add_subdirectory(Operator)
